fix: sign up components are aligned in a common style

--- a/src/features/auth/RecoveryPassword/RecoveryPassword.module.css
+++ b/src/features/auth/RecoveryPassword/RecoveryPassword.module.css
@@ -1,9 +1,9 @@
 .container {
-    width: 27%;
+    width: 413px;
+    height: 552px;
     border: 1px solid gray;
     background: white;
     border-radius: 5px;
-    padding: 33px;
 }
 
 h1 {
@@ -25,7 +25,10 @@ h1 {
     margin-top: 20px;
     border-radius: 20px;
 }
-
+.loginWrapper {
+    width: 350px;
+    margin: 0 auto;
+}
 
 .questionBlock {
     margin-top: 40px;
